--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <span class="n">rounds</span> <span class="o">=</span> <span class="n">MatchScraper</span><span class="o">.</span><span class="n">scrape</span><span class="p">(</span><span class="mi">2015</span><span class="p">)</span>
 </pre></div>
 </div>
-<p>See the docs on [Round](#afl_tables.Round) for more information on how to use this object</p>
+<p>See the docs on <cite>Round &lt;https://tmiguelt.github.io/AflTablesScraper#afl_tables.Round&gt;</cite>) for more information on how to use this object</p>
 </div>
 </div>
 <div class="section" id="module-afl_tables">
