--- a/_modules/afl_tables.html
+++ b/_modules/afl_tables.html
@@ -33,6 +33,7 @@
 <span></span><span class="kn">from</span> <span class="nn">urllib.parse</span> <span class="k">import</span> <span class="n">urljoin</span>
 <span class="kn">import</span> <span class="nn">requests</span>
 <span class="kn">import</span> <span class="nn">bs4</span>
+<span class="kn">import</span> <span class="nn">datetime</span>
 <span class="kn">import</span> <span class="nn">itertools</span>
 <span class="kn">import</span> <span class="nn">typing</span>
 <span class="kn">from</span> <span class="nn">bs4</span> <span class="k">import</span> <span class="n">BeautifulSoup</span>
@@ -72,7 +73,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Parses a string in the form x.y</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">goals</span><span class="p">,</span> <span class="n">behinds</span> <span class="o">=</span> <span class="n">pointstring</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;.&#39;</span><span class="p">)</span>
+        <span class="n">goals</span><span class="p">,</span> <span class="n">behinds</span> <span class="o">=</span> <span class="n">pointstring</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;)&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;.&#39;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">Score</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">goals</span><span class="p">),</span> <span class="nb">int</span><span class="p">(</span><span class="n">behinds</span><span class="p">))</span></div>
 
     <span class="nd">@property</span>
@@ -121,9 +122,15 @@
 <span class="sd">    Represents a single match of AFL</span>
 
 <span class="sd">    :ivar teams: A list of teams, with either two teams or one team (a bye)</span>
+<span class="sd">    :ivar attendees: Number of attendees at this match</span>
+<span class="sd">    :ivar date: The time and date that this match started</span>
+<span class="sd">    :ivar venue: The name of the venue at which this match was played</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">teams</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">TeamRound</span><span class="p">]</span>
+    <span class="n">attendees</span><span class="p">:</span> <span class="nb">int</span>
+    <span class="n">date</span><span class="p">:</span> <span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span>
+    <span class="n">venue</span><span class="p">:</span> <span class="nb">str</span>
 
 <div class="viewcode-block" id="Match.parse"><a class="viewcode-back" href="../index.html#afl_tables.Match.parse">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">parse</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">table</span><span class="p">:</span> <span class="n">bs4</span><span class="o">.</span><span class="n">Tag</span><span class="p">):</span>
@@ -134,14 +141,25 @@
 
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">td</span><span class="p">)</span> <span class="o">==</span> <span class="mi">8</span><span class="p">:</span>
             <span class="n">team_1</span><span class="p">,</span> <span class="n">team_1_stats</span><span class="p">,</span> <span class="n">team_1_score</span><span class="p">,</span> <span class="n">misc</span><span class="p">,</span> <span class="n">team_2</span><span class="p">,</span> <span class="n">team_2_stats</span><span class="p">,</span> <span class="n">team_2_score</span><span class="p">,</span> <span class="n">winner</span> <span class="o">=</span> <span class="n">td</span>
-            <span class="k">return</span> <span class="bp">cls</span><span class="p">([</span><span class="n">TeamRound</span><span class="o">.</span><span class="n">parse_match</span><span class="p">(</span><span class="n">team_1</span><span class="p">,</span> <span class="n">team_1_stats</span><span class="p">),</span> <span class="n">TeamRound</span><span class="o">.</span><span class="n">parse_match</span><span class="p">(</span><span class="n">team_2</span><span class="p">,</span> <span class="n">team_2_stats</span><span class="p">)])</span>
+            <span class="n">date</span><span class="p">,</span> <span class="n">_</span><span class="p">,</span> <span class="n">attendees</span><span class="p">,</span> <span class="n">_</span><span class="p">,</span> <span class="n">_</span><span class="p">,</span> <span class="n">venue</span> <span class="o">=</span> <span class="n">misc</span>
+            <span class="n">simple_date</span> <span class="o">=</span> <span class="s1">&#39; &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">date</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39; &#39;</span><span class="p">)[:</span><span class="mi">4</span><span class="p">])</span>
+            <span class="n">parsed_date</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span><span class="o">.</span><span class="n">strptime</span><span class="p">(</span><span class="n">simple_date</span><span class="p">,</span> <span class="s1">&#39;%a </span><span class="si">%d</span><span class="s1">-%b-%Y %I:%M %p&#39;</span><span class="p">)</span>
+            <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span>
+                <span class="p">[</span><span class="n">TeamRound</span><span class="o">.</span><span class="n">parse_match</span><span class="p">(</span><span class="n">team_1</span><span class="p">,</span> <span class="n">team_1_stats</span><span class="p">),</span> <span class="n">TeamRound</span><span class="o">.</span><span class="n">parse_match</span><span class="p">(</span><span class="n">team_2</span><span class="p">,</span> <span class="n">team_2_stats</span><span class="p">)],</span>
+                <span class="n">date</span><span class="o">=</span><span class="n">parsed_date</span><span class="p">,</span>
+                <span class="n">venue</span><span class="o">=</span><span class="n">venue</span><span class="o">.</span><span class="n">text</span><span class="p">,</span>
+                <span class="n">attendees</span><span class="o">=</span><span class="nb">int</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">attendees</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39; &#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">))</span>
+            <span class="p">)</span>
         <span class="k">elif</span> <span class="nb">len</span><span class="p">(</span><span class="n">td</span><span class="p">)</span> <span class="o">==</span> <span class="mi">2</span><span class="p">:</span>
             <span class="k">return</span> <span class="bp">cls</span><span class="p">([</span><span class="n">TeamRound</span><span class="o">.</span><span class="n">parse_bye</span><span class="p">(</span><span class="n">td</span><span class="p">[</span><span class="mi">0</span><span class="p">])])</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">MatchException</span><span class="p">(</span><span class="s1">&#39;This is invalid markup for a Match object&#39;</span><span class="p">)</span></div>
 
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">teams</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">TeamRound</span><span class="p">]):</span>
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">teams</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">TeamRound</span><span class="p">],</span> <span class="n">attendees</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">date</span><span class="p">:</span> <span class="n">datetime</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">venue</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">teams</span> <span class="o">=</span> <span class="n">teams</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">attendees</span> <span class="o">=</span> <span class="n">attendees</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">date</span> <span class="o">=</span> <span class="n">date</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">venue</span> <span class="o">=</span> <span class="n">venue</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">bye</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
