--- a/genindex.html
+++ b/genindex.html
@@ -86,10 +86,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#afl_tables.Score">Score (class in afl_tables)</a>
+      <li><a href="index.html#afl_tables.Score.score">score (afl_tables.Score attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#afl_tables.Score">Score (class in afl_tables)</a>
+</li>
       <li><a href="index.html#afl_tables.MatchScraper.scrape">scrape() (afl_tables.MatchScraper class method)</a>
 </li>
   </ul></td>
